==> daweiyou/OpenBlt-on-i.MXRT1170/RT1170_OpenBLT_V11/OpenBLT/lib/uip/netdev.c <==
#include <string.h>
#include "uip.h"
#include "uip_arp.h"
#include "boot.h"
#include "fsl_common.h"
#include "fsl_enet.h"
#include "fsl_phy.h"
#include "fsl_memory.h"
#include "fsl_enet_mdio.h"
#include "fsl_phyksz8081.h"
#include "fsl_gpio.h"
#include "fsl_debug_console.h"
#define NETDEV_DEFAULT_MACADDR0           (0x08)
#define NETDEV_DEFAULT_MACADDR1           (0x00)
#define NETDEV_DEFAULT_MACADDR2           (0x27)
#define NETDEV_DEFAULT_MACADDR3           (0x69)
#define NETDEV_DEFAULT_MACADDR4           (0x5B)
#define NETDEV_DEFAULT_MACADDR5           (0x45)
#define NETDEV_TX_PACKET_TIMEOUT_MS       (250u)
#define EXAMPLE_ENET        ENET
#define EXAMPLE_PHY_ADDRESS 0x02U
#define EXAMPLE_MDIO_OPS enet_ops
#define EXAMPLE_PHY_OPS phyksz8081_ops
#define EXAMPLE_CLOCK_FREQ CLOCK_GetRootClockFreq(kCLOCK_Root_Bus)
#define ENET_RXBD_NUM          (4)
#define ENET_TXBD_NUM          (4)
#define ENET_RXBUFF_SIZE       (ENET_FRAME_MAX_FRAMELEN)
#define ENET_TXBUFF_SIZE       (ENET_FRAME_MAX_FRAMELEN)
#define ENET_DATA_LENGTH       (1000)
#define ENET_TRANSMIT_DATA_NUM (20)
#define APP_ENET_BUFF_ALIGNMENT ENET_BUFF_ALIGNMENT
#define PHY_AUTONEGO_TIMEOUT_COUNT (100000)
#define PHY_STABILITY_DELAY_US (0U)
#define MAC_ADDRESS {0xd4, 0xbe, 0xd9, 0x45, 0x22, 0x60}
#define BROADCAST_ADDRESS {0xff,0xff,0xff,0xff,0xff,0xff}

void netdev_init(void)
{
    enet_config_t config;
    phy_config_t phyConfig = {0};
    uint32_t length        = 0;
    bool link              = false;
    bool autonego          = false;
    phy_speed_t speed;
    phy_duplex_t duplex;
    uint32_t testTxNum = 0;
    status_t status;
    enet_data_error_stats_t eErrStatic;
    volatile uint32_t count = 0;
    
        /* Hardware Initialization. */
    gpio_pin_config_t gpio_config = {kGPIO_DigitalOutput, 0, kGPIO_NoIntmode};

  /* Store the default MAC address. */
//  macAddress.addr[0] = NETDEV_DEFAULT_MACADDR0;
//  macAddress.addr[1] = NETDEV_DEFAULT_MACADDR1;
//  macAddress.addr[2] = NETDEV_DEFAULT_MACADDR2;
//  macAddress.addr[3] = NETDEV_DEFAULT_MACADDR3;
//  macAddress.addr[4] = NETDEV_DEFAULT_MACADDR4;
//  macAddress.addr[5] = NETDEV_DEFAULT_MACADDR5;
    
    
//  /* Initialize Ethernet. */
//  heth.Instance = ETH;
//  heth.Init.AutoNegotiation = ETH_AUTONEGOTIATION_ENABLE;
//  heth.Init.PhyAddress = LAN8742A_PHY_ADDRESS;
//  heth.Init.MACAddr = &(macAddress.addr)[0];
//  heth.Init.RxMode = ETH_RXPOLLING_MODE;
//  heth.Init.ChecksumMode = ETH_CHECKSUM_BY_HARDWARE;
//  heth.Init.MediaInterface = ETH_MEDIA_INTERFACE_RMII;
//  (void)HAL_ETH_Init(&heth);
//
//  /* Initialize Tx Descriptors list: Chain Mode */
//  HAL_ETH_DMATxDescListInit(&heth, DMATxDscrTab, &Tx_Buff[0][0], ETH_TXBUFNB);
//  /* Initialize Rx Descriptors list: Chain Mode  */
//  HAL_ETH_DMARxDescListInit(&heth, DMARxDscrTab, &Rx_Buff[0][0], ETH_RXBUFNB);
//  /* Enable MAC and DMA transmission and reception */
//  HAL_ETH_Start(&heth);
    
    
      /* Configure the MAC address */
  macAddress.addr[0] = g_macAddr[0];
  macAddress.addr[1] = g_macAddr[1];
  macAddress.addr[2] = g_macAddr[2];
  macAddress.addr[3] = g_macAddr[3];
  macAddress.addr[4] = g_macAddr[4];
  macAddress.addr[5] = g_macAddr[5];
  
  
    BOARD_InitModuleClock();
    /* 50M ENET_REF_CLOCK output to PHY and ENET module. */
    IOMUXC_GPR->GPR4 |= IOMUXC_GPR_GPR4_ENET_REF_CLK_DIR_MASK;
    /* Errata ERR050396: For some bus masters, writing access to CM7 TCM is handled by a NIC301 block which does
     * not support sparse write conversion. It results in a data corruption when sparse writing to CM7 TCM happens.
     * For ENET: If CM7 TCM is the destination for writing, IOMUXC_GPR_GPR28[CACHE_ENET] should be cleared. If
     * IOMUXC_GPR_GPR28[CACHE_ENET] is set, write buffers must be placed in OCRAM or external RAM. */
    IOMUXC_GPR->GPR28 &= (~IOMUXC_GPR_GPR28_CACHE_ENET_MASK);
    GPIO_PinInit(GPIO9, 11, &gpio_config);
    GPIO_PinInit(GPIO12, 12, &gpio_config);
    /* Pull up the ENET_INT before RESET. */
    GPIO_WritePinOutput(GPIO9, 11, 1);
    GPIO_WritePinOutput(GPIO12, 12, 0);
    SDK_DelayAtLeastUs(10000, CLOCK_GetFreq(kCLOCK_CpuClk));
    GPIO_WritePinOutput(GPIO12, 12, 1);
    SDK_DelayAtLeastUs(6, CLOCK_GetFreq(kCLOCK_CpuClk));
    PRINTF("\r\nENET OpenBLT start.\r\n");

    /* Prepare the buffer configuration. */
    enet_buffer_config_t buffConfig[] = {{
        ENET_RXBD_NUM,
        ENET_TXBD_NUM,
        SDK_SIZEALIGN(ENET_RXBUFF_SIZE, APP_ENET_BUFF_ALIGNMENT),
        SDK_SIZEALIGN(ENET_TXBUFF_SIZE, APP_ENET_BUFF_ALIGNMENT),
        &g_rxBuffDescrip[0],
        &g_txBuffDescrip[0],
        &g_rxDataBuff[0][0],
        &g_txDataBuff[0][0],
        true,
        true,
        NULL,
    }};
    
    /* Get default configuration. */
    /*
     * config.miiMode = kENET_RmiiMode;
     * config.miiSpeed = kENET_MiiSpeed100M;
     * config.miiDuplex = kENET_MiiFullDuplex;
     * config.rxMaxFrameLen = ENET_FRAME_MAX_FRAMELEN;
     */
    ENET_GetDefaultConfig(&config);

    /* The miiMode should be set according to the different PHY interfaces. */
#ifdef EXAMPLE_PHY_INTERFACE_RGMII
    config.miiMode = kENET_RgmiiMode;
#else
    config.miiMode = kENET_RmiiMode;
#endif
    phyConfig.phyAddr               = EXAMPLE_PHY_ADDRESS;
    phyConfig.autoNeg               = true;
    mdioHandle.resource.base        = EXAMPLE_ENET;
    mdioHandle.resource.csrClock_Hz = EXAMPLE_CLOCK_FREQ;
    /* Initialize PHY and wait auto-negotiation over. */
    PRINTF("Wait for PHY init...\r\n");
    do
    {
        status = PHY_Init(&phyHandle, &phyConfig);
        if (status == kStatus_Success)
        {
            PRINTF("Wait for PHY link up...\r\n");
            /* Wait for auto-negotiation success and link up */
            count = PHY_AUTONEGO_TIMEOUT_COUNT;
            do
            {
                PHY_GetAutoNegotiationStatus(&phyHandle, &autonego);
                PHY_GetLinkStatus(&phyHandle, &link);
                if (autonego && link)
                {
                    PRINTF("PHY Auto-negotiation success\r\n");
                    break;
                }
            } while (--count);
            if (!autonego)
            {
                PRINTF("PHY Auto-negotiation failed. Please check the cable connection and link partner setting.\r\n");
            }
        }
    } while (!(link && autonego));
#if PHY_STABILITY_DELAY_US
    /* Wait a moment for PHY status to be stable. */
    SDK_DelayAtLeastUs(PHY_STABILITY_DELAY_US, SDK_DEVICE_MAXIMUM_CPU_CLOCK_FREQUENCY);
#endif

    /* Get the actual PHY link speed. */
    PHY_GetLinkSpeedDuplex(&phyHandle, &speed, &duplex);
    /* Change the MII speed and duplex for actual link status. */
    config.miiSpeed  = (enet_mii_speed_t)speed;
    config.miiDuplex = (enet_mii_duplex_t)duplex;

    ENET_Init(EXAMPLE_ENET, &g_handle, &config, &buffConfig[0], &g_macAddr[0], EXAMPLE_CLOCK_FREQ);
    ENET_ActiveRead(EXAMPLE_ENET);
}

unsigned int netdev_read(void)
{
    enet_config_t config;
    phy_config_t phyConfig = {0};
    uint32_t length        = 0;
    bool link              = false;
    bool autonego          = false;
    phy_speed_t speed;
    phy_duplex_t duplex;
    uint32_t testTxNum = 0;
    status_t status;
    enet_data_error_stats_t eErrStatic;
    volatile uint32_t count = 0;
    
  unsigned int result = 0;
//  uint16_t  len = 0;
//  uint8_t * buffer;
//  __IO ETH_DMADescTypeDef *dmarxdesc;
//
//  /* Check if a new frame was received. */
//  if (HAL_ETH_GetReceivedFrame(&heth) == HAL_OK)
//  {
//    /* Obtain the size of the packet and a pointer to the buffer with packet data. */
//    len = heth.RxFrameInfos.length;
//    buffer = (uint8_t *)heth.RxFrameInfos.buffer;
//    /* Copy the received packet data into the uip buffer. */
//    memcpy(uip_buf, buffer, len);
//    /* Obtain pointer to the reception DMA descriptor. */
//    dmarxdesc = heth.RxFrameInfos.FSRxDesc;
//    /* Give the buffer back to DMA by setting the Own-bit in the reception descriptor. */
//    dmarxdesc->Status |= ETH_DMARXDESC_OWN;
//    /* Clear the segment count. */
//    heth.RxFrameInfos.SegCount =0;
//    /* When reception buffer unavailable flag is set, clear it and resume reception. */
//    if ((heth.Instance->DMASR & ETH_DMASR_RBUS) != (uint32_t)RESET)
//    {
//      /* Clear RBUS ETHERNET DMA flag */
//      heth.Instance->DMASR = ETH_DMASR_RBUS;
//      /* Resume DMA reception */
//      heth.Instance->DMARPDR = 0;
//    }
//    /* Update the result. */
//    result = len;
//  }
  
          /* Get the Frame size */
        status = ENET_GetRxFrameSize(&g_handle, &length, 0);
        /* Call ENET_ReadFrame when there is a received frame. */
        if (length != 0)
        {
            
            /* Received valid frame. Deliver the rx buffer with the size equal to length. */
            uint8_t *data = (uint8_t *)malloc(length);
            status        = ENET_ReadFrame(EXAMPLE_ENET, &g_handle, data, length, 0, NULL);
            if (status == kStatus_Success)
            {
#if 0
                if(memcmp(g_broadcastAddr, data, 6) != 0)
                {
                  
                    PRINTF(" A frame received. the length %d ", length);
                    PRINTF(" Dest Address %02x:%02x:%02x:%02x:%02x:%02x Src Address %02x:%02x:%02x:%02x:%02x:%02x \r\n",
                       data[0], data[1], data[2], data[3], data[4], data[5], data[6], data[7], data[8], data[9],
                       data[10], data[11]);

                }
                else
                {
                  //¹ã²¥°ü
                    /*
                    PRINTF(" A frame received. the length %d ", length);
                    PRINTF(" Dest Address %02x:%02x:%02x:%02x:%02x:%02x Src Address %02x:%02x:%02x:%02x:%02x:%02x \r\n",
                       data[0], data[1], data[2], data[3], data[4], data[5], data[6], data[7], data[8], data[9],
                       data[10], data[11]);
                    */
                }
#endif
                /* Copy the received packet data into the uip buffer. */
                memcpy(uip_buf, data, length);
                /* Update the result. */
                result = length;
            }
            free(data);
        }
        else if (status == kStatus_ENET_RxFrameError)
        {
            /* Update the received buffer when error happened. */
            /* Get the error information of the received g_frame. */
            ENET_GetRxErrBeforeReadFrame(&g_handle, &eErrStatic, 0);
            /* update the receive buffer. */
            ENET_ReadFrame(EXAMPLE_ENET, &g_handle, NULL, 0, 0, NULL);
            result = 0;
        }
        
  /* Give the result back to the caller. */
  return result;
}

void netdev_send(void)
{
//  uint8_t * buffer;
//  __IO ETH_DMADescTypeDef *DmaTxDesc;
//  uint32_t framelength;
//  uint32_t timeout;
//  ErrorStatus errorStatus = SUCCESS;

    enet_config_t config;
    phy_config_t phyConfig = {0};
    uint32_t length        = 0;
    bool link              = false;
    bool autonego          = false;
    phy_speed_t speed;
    phy_duplex_t duplex;
    uint32_t testTxNum = 0;
    status_t status;
    enet_data_error_stats_t eErrStatic;
    volatile uint32_t count = 0;
    
    uint32_t framelength;
    uint8_t * buffer;
    
    static uint32_t TxNum = 0;
    
//  /* Obtain pointer to the transmission DMA descriptor. */
//  DmaTxDesc = heth.TxDesc;
//  /* Set timeout time to wait for the DMA buffer to become available. */
//  timeout = TimerGet() + NETDEV_TX_PACKET_TIMEOUT_MS;
//  /* Only continue with packet transmission of the buffer is available. */
//  while ((DmaTxDesc->Status & ETH_DMATXDESC_OWN) != (uint32_t)RESET)
//  {
//    CopService();
//    /* Break loop upon timeout. This would indicate a hardware failure. */
//    if (TimerGet() > timeout)
//    {
//      /* Update the error status. */
//      errorStatus = ERROR;
//      break;
//    }
//  }
  /* Only continue with transmission if not error was detected. */
//  if (errorStatus == SUCCESS)
//  {
//    /* Store the framelength. */
//    framelength = uip_len;
//    /* Obtain pointer to write the packet data to. */
//    buffer = (uint8_t *)(heth.TxDesc->Buffer1Addr);
//    /* Copy the packet data to the buffer. */
//    memcpy(buffer, uip_buf, framelength);
//    /* Prepare transmit descriptors to give to DMA. */
//    HAL_ETH_TransmitFrame(&heth, framelength);
//  }

  /* When Transmit Underflow flag is set, clear it and issue a Transmit Poll Demand to
   * resume transmission.
   */
//  if ((heth.Instance->DMASR & ETH_DMASR_TUS) != (uint32_t)RESET)
//  {
//    /* Clear TUS ETHERNET DMA flag. */
//    heth.Instance->DMASR = ETH_DMASR_TUS;
//    /* Resume DMA transmission. */
//    heth.Instance->DMATPDR = 0;
//  }
  
            if (kStatus_Success == PHY_GetLinkStatus(&phyHandle, &link))
            {
                if (link)
                {
                    /* Store the framelength. */
                    framelength = uip_len;

                   /* Copy the packet data to the buffer. */
                   memcpy(&g_frame[0], uip_buf, framelength);
                    
                    if (kStatus_Success ==
                        ENET_SendFrame(EXAMPLE_ENET, &g_handle, &g_frame[0], framelength, 0, false, NULL))
                    {
                        //PRINTF("The %d frame transmitted success!\r\n", TxNum++);
                    }
                    else
                    {
                        //PRINTF(" \r\nTransmit frame failed!\r\n");
                    }
                }
            }
}
